--- a/scss/style.scss
+++ b/scss/style.scss
@@ -86,30 +86,29 @@ body {
 	background-color: $background-off-white;
 }
 
-.button{
- display:inline-block;
- padding:0.35em 1.2em;
- border:0.1em solid #FFFFFF;
- margin:0 0.3em 0.3em 0;
- border-radius:0.12em;
- box-sizing: border-box;
- text-decoration:none;
- font-family:'Roboto',sans-serif;
- font-weight:300;
- color:#FFFFFF;
- text-align:center;
- transition: all 0.2s;
+.button {
+	 display: inline-block;
+	 padding: 0.35em 1.2em;
+	 border: 0.1em solid #ffffff;
+	 margin: 0 0.3em 0.3em 0;
+	 border-radius: 0.12em;
+	 box-sizing: border-box;
+	 text-decoration: none;
+	 font-family: 'Roboto', sans-serif;
+	 font-weight: 300;
+	 color: #ffffff;
+	 text-align: center;
+	 transition: all 0.2s;
 }
-.button:hover{
- color:#000000;
- background-color:#FFFFFF;
+.button:hover {
+	 color: #000000;
+	 background-color: #ffffff;
 }
 // @media all and (max-width:30em){
 //  a.button1{
 //   display:block;
 //   margin:0.4em auto;
 //  }
-} 
 
 //typography
 
