--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* ============================================= */
 /*         Descriptive colors                    */
 /* ============================================= */
@@ -27,32 +26,30 @@
 /* ============================================= */
 /*         Font weights                          */
 /* ============================================= */
-html {
-  background-color: #f8f9fa;
-}
-
-body {
+html,
+body,
+.header {
   background-color: #f8f9fa;
 }
 
 .button {
-   display: inline-block;
-   padding: 0.35em 1.2em;
-   border: 0.1em solid #ffffff;
-   margin: 0 0.3em 0.3em 0;
-   border-radius: 0.12em;
-   box-sizing: border-box;
-   text-decoration: none;
-   font-family: "Roboto", sans-serif;
-   font-weight: 300;
-   color: #ffffff;
-   text-align: center;
-   transition: all 0.2s;
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 4px solid #2182bf;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.12em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Fira Code", monospace;
+  font-weight: 500;
+  color: #1a1a1a;
+  background-color: #ffffff;
+  text-align: center;
+  transition: all 0.2s;
 }
 
 .button:hover {
-   color: #000000;
-   background-color: #ffffff;
+  background-color: #2182bf;
 }
 
 .nav-link {
@@ -66,7 +63,22 @@ body {
 
 .main-headline {
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
+}
+@media (min-width: 600px) {
+  .main-headline {
+    font-size: 1.8rem;
+  }
+}
+@media (min-width: 1200px) {
+  .main-headline {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 1800px) {
+  .main-headline {
+    font-size: 2.5rem;
+  }
 }
 
 .members-headline-container {
@@ -103,14 +115,20 @@ body {
   font-size: 2.25rem;
 }
 
+nav,
+.header {
+  background-color: #ffffff;
+}
+
 .header {
   height: 150px;
-  background-color: white;
   padding: 0;
+  box-shadow: 0 2px #cccccc;
 }
 
 .logo {
   height: 120px;
+  margin-top: 10px;
 }
 
 .nav-link:last-of-type {
@@ -121,21 +139,43 @@ body {
   z-index: 1;
   position: relative;
   height: 100vh;
+  padding: 0;
 }
 
 .main-headline-container {
   border-left: 4px solid #a792ff;
-  height: 280px;
+  height: 100%;
   margin-top: 250px;
   padding-left: 20px;
+}
+@media (max-width: 599px) {
+  .main-headline-container {
+    margin-top: 220px;
+  }
 }
 
 .hero-banner-img-container {
   height: 600px;
   z-index: 3;
-  margin-top: 150px;
+  margin-top: -60px;
   overflow: hidden;
   position: relative;
+}
+@media (max-width: 599px) {
+  .hero-banner-img-container {
+    margin: 180px 20px 0 20px;
+    height: 440px;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-banner-img-container {
+    width: 500px;
+  }
+}
+@media (min-width: 1800px) {
+  .hero-banner-img-container {
+    width: 800px;
+  }
 }
 
 .hero-banner-img {
@@ -148,6 +188,11 @@ body {
   position: absolute;
   left: -100px;
   top: 0;
+}
+@media (max-width: 599px) {
+  .hero-banner-img {
+    height: 550px;
+  }
 }
 
 .background-el-three-fourths-screen {
@@ -209,16 +254,32 @@ body {
 }
 
 .card {
-  margin: 100px 80px 0;
-}
-
-.card-body {
-  margin: 0 8%;
+  margin-top: 100px;
 }
 
 .event-icon {
   height: 150px;
   margin-top: -105px;
+}
+
+.jobs-img-container {
+  height: 600px;
+  z-index: 3;
+  margin-top: 180px;
+  overflow: hidden;
+  position: relative;
+}
+
+.jobs-img {
+  background-image: url("../images/hero-main-img.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 3;
+  height: 750px;
+  width: 120%;
+  position: absolute;
+  left: -100px;
+  top: 0;
 }
 
 .background-el-small-left {
@@ -298,7 +359,7 @@ body {
 .section {
   z-index: 1;
   position: relative;
-  height: 60vh;
+  height: 100%;
 }
 
 .members-icon {
@@ -342,7 +403,8 @@ body {
 .HSF_logo_footer {
   position: absolute;
   top: -101px;
-  left: 46.5%;
+  left: 50%;
+  margin-left: -75px;
 }
 
 .logo_Dark {
