--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,30 @@
 // ==========================================================================
+// Mixins
+// ==========================================================================
+
+//Media queries
+
+@mixin for-size($size) {
+	@if $size == phone {
+		@media (max-width: 599px) {
+			@content;
+		}
+	} @else if $size == tablet {
+		@media (min-width: 600px) {
+			@content;
+		}
+	} @else if $size == desktop {
+		@media (min-width: 1200px) {
+			@content;
+		}
+	} @else if $size == desktop_lg {
+		@media (min-width: 1800px) {
+			@content;
+		}
+	}
+}
+
+// ==========================================================================
 // Variables
 // ==========================================================================
 
@@ -78,37 +104,36 @@ $font-bold: 700;
 
 //base styles
 
-html {
-	background-color: $background-off-white;
-}
-
-body {
+html,
+body,
+.header {
 	background-color: $background-off-white;
 }
 
 .button {
-	 display: inline-block;
-	 padding: 0.35em 1.2em;
-	 border: 0.1em solid #ffffff;
-	 margin: 0 0.3em 0.3em 0;
-	 border-radius: 0.12em;
-	 box-sizing: border-box;
-	 text-decoration: none;
-	 font-family: 'Roboto', sans-serif;
-	 font-weight: 300;
-	 color: #ffffff;
-	 text-align: center;
-	 transition: all 0.2s;
+	display: inline-block;
+	padding: 0.35em 1.2em;
+	border: 4px solid $Curious-Blue;
+	margin: 0 0.3em 0.3em 0;
+	border-radius: 0.12em;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: $main-font;
+	font-weight: $font-medium;
+	color: $font-secondary-color;
+	background-color: $white;
+	text-align: center;
+	transition: all 0.2s;
 }
 .button:hover {
-	 color: #000000;
-	 background-color: #ffffff;
+	background-color: $Curious-Blue;
 }
 // @media all and (max-width:30em){
 //  a.button1{
 //   display:block;
 //   margin:0.4em auto;
-//  }
+//	 }
+// }
 
 //typography
 
@@ -123,7 +148,16 @@ body {
 
 .main-headline {
 	font-weight: $font-bold;
-	font-size: 2.5rem;
+	font-size: 1.5rem;
+	@include for-size(tablet) {
+		font-size: 1.8rem;
+	}
+	@include for-size(desktop) {
+		font-size: 2rem;
+	}
+	@include for-size(desktop_lg) {
+		font-size: 2.5rem;
+	}
 }
 
 .members-headline-container {
@@ -161,14 +195,21 @@ body {
 }
 
 //headers styles
+
+nav,
+.header {
+	background-color: $white;
+}
+
 .header {
 	height: 150px;
-	background-color: white;
 	padding: 0;
+	box-shadow: 0 2px $Very-Light-Grey;
 }
 
 .logo {
 	height: 120px;
+	margin-top: 10px;
 }
 
 .nav-link:last-of-type {
@@ -181,21 +222,35 @@ body {
 	z-index: 1;
 	position: relative;
 	height: 100vh;
+	padding: 0;
 }
 
 .main-headline-container {
 	border-left: 4px solid $Biloba-Flower;
-	height: 280px;
+	height: 100%;
 	margin-top: 250px;
 	padding-left: 20px;
+	@include for-size(phone) {
+		margin-top: 220px;
+	}
 }
 
 .hero-banner-img-container {
 	height: 600px;
 	z-index: 3;
-	margin-top: 150px;
+	margin-top: -60px;
 	overflow: hidden;
 	position: relative;
+	@include for-size(phone) {
+		margin: 180px 20px 0 20px;
+		height: 440px;
+	}
+	@include for-size(desktop) {
+		width: 500px;
+	}
+	@include for-size(desktop_lg) {
+		width: 800px;
+	}
 }
 
 .hero-banner-img {
@@ -208,6 +263,9 @@ body {
 	position: absolute;
 	left: -100px;
 	top: 0;
+	@include for-size(phone) {
+		height: 550px;
+	}
 }
 
 .background-el-three-fourths-screen {
@@ -241,6 +299,12 @@ body {
 
 // card styles
 
+.event-headline {
+}
+
+.event-container {
+}
+
 .background-el-full {
 	height: 450px;
 	z-index: -2;
@@ -269,11 +333,7 @@ body {
 }
 
 .card {
-	margin: 100px 80px 0;
-}
-
-.card-body {
-	margin: 0 8%;
+	margin-top: 100px;
 }
 
 .event-icon {
@@ -282,6 +342,26 @@ body {
 }
 
 // jobs and training section
+
+.jobs-img-container {
+	height: 600px;
+	z-index: 3;
+	margin-top: 180px;
+	overflow: hidden;
+	position: relative;
+}
+
+.jobs-img {
+	background-image: url('../images/hero-main-img.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	z-index: 3;
+	height: 750px;
+	width: 120%;
+	position: absolute;
+	left: -100px;
+	top: 0;
+}
 
 .background-el-small-left {
 	height: 450px;
@@ -358,7 +438,7 @@ body {
 .section {
 	z-index: 1;
 	position: relative;
-	height: 60vh;
+	height: 100%;
 }
 
 .members-icon {
@@ -407,7 +487,8 @@ body {
 .HSF_logo_footer {
 	position: absolute;
 	top: -101px;
-	left: 46.5%;
+	left: 50%;
+	margin-left: -75px;
 }
 
 .logo_Dark {
